--- a/app/src/main/webapp/pages/client/client-index.xhtml
+++ b/app/src/main/webapp/pages/client/client-index.xhtml
@@ -23,8 +23,8 @@
                 </h:commandLink>
             </div>
 
-            <h:dataTable class="table animate__animated animate__fadeIn" value="#{clientController.clients}" var="data" 
-                         rendered="#{clientController.clients.size()>0}">
+            <h:dataTable class="table animate__animated animate__fadeIn" value="#{clientController.getClients(false)}" var="data" 
+                         rendered="#{clientController.getClients(false).size()>0}">
                 <h:column>
                     <f:facet name="header">#</f:facet>
                     <h:outputText class="fw-bold" value="#{data.index}"></h:outputText>
@@ -74,7 +74,7 @@
             </h:dataTable>
         </h:form>
         
-        <h:form class="my-4 animate__animated animate__fadeIn" rendered="#{clientController.clients.size()==0}">
+        <h:form class="my-4 animate__animated animate__fadeIn" rendered="#{clientController.getClients(false).size()==0}">
             <div class="alert alert-warning text-center">
                 <h:outputLabel class="fw-bold" value="No hay datos"/>
             </div>
