--- a/app/src/main/webapp/pages/document/document-type-index.xhtml
+++ b/app/src/main/webapp/pages/document/document-type-index.xhtml
@@ -18,14 +18,19 @@
             <div class="row">
                 <div class="col-11">
                     <h:outputLabel class="form-label" value="Nombre"/>
-                    <h:inputText class="form-control" autocomplete="off" value="#{ editDocument.name ? editDocument.name : documentType.name}"/>
+                    <h:inputText class="form-control" id="name"
+                                 value="#{documentType.name}"
+                                 autocomplete="off" 
+                                 required="true" 
+                                 requiredMessage="Nombre es obligatorio"/>
+                    
+                    <h:message for="name" class="text-danger fs-6 fw-light"></h:message>
                 </div>
                 <div class="col-1 mt-4 text-end">
                     <h:commandLink class="btn btn-dark mt-2" action="#{documentTypeNav.post(documentType)}">
                         <i class="fa-solid fa-plus"></i>
                     </h:commandLink>
                 </div>
-                <h:messages></h:messages>
             </div>
 
             <br></br>
