--- a/app/src/main/webapp/pages/mechanic/mechanic-index.xhtml
+++ b/app/src/main/webapp/pages/mechanic/mechanic-index.xhtml
@@ -22,8 +22,8 @@
                 </h:commandLink>
             </div>
 
-            <h:dataTable class="table" value="#{mechanicController.mechanics}" var="data" 
-                         rendered="#{mechanicController.mechanics.size()>0}">
+            <h:dataTable class="table" value="#{mechanicController.getMechanics(false)}" var="data" 
+                         rendered="#{mechanicController.getMechanics(false).size()>0}">
                 <h:column>
                     <f:facet name="header">#</f:facet>
                     <h:outputText class="fw-bold" value="#{data.index}"></h:outputText>
@@ -73,7 +73,7 @@
             </h:dataTable>
         </h:form>
 
-        <h:form class="my-4 animate__animated animate__fadeIn" rendered="#{mechanicController.mechanics.size()==0}">
+        <h:form class="my-4 animate__animated animate__fadeIn" rendered="#{mechanicController.getMechanics(false).size()==0}">
             <div class="alert alert-warning text-center">
                 <h:outputLabel class="fw-bold" value="No hay datos"/>
             </div>
