--- a/app/src/main/webapp/pages/replacement/replacement-index.xhtml
+++ b/app/src/main/webapp/pages/replacement/replacement-index.xhtml
@@ -32,7 +32,7 @@
                         <h:inputText class="form-control" id="price"
                                      value="#{replacement.price}"
                                      required="true"
-                                     requiredMessage="Precio obligatorio">
+                                     requiredMessage="Precio es obligatorio">
                             
                             <f:validator validatorId="validNumeric"/>
                         </h:inputText>
