--- a/app/src/main/webapp/pages/bill/bill-create.xhtml
+++ b/app/src/main/webapp/pages/bill/bill-create.xhtml
@@ -23,81 +23,7 @@
             </div>
         </div>
         <hr></hr>
-
-        <div class="card p-5">
-            <h:form>
-                <div class="row">
-                    <div class="col-12">
-                        <h4>Servicio</h4>
-                        <hr></hr>
-                    </div>
-
-                    <div class="col-6">
-                        <h:outputLabel class="form-label" value="Cliente"/>
-                        <h:selectOneMenu class="col-12 form-select">
-                            <f:selectItem itemLabel="Seleccione..."/>
-                            <f:selectItems value="#{clientController.getClients(true)}" var="data" itemValue="#{data.id}" itemLabel="#{data.documentNumber} - #{data.fullName}"/>
-                        </h:selectOneMenu>
-                    </div>
-
-                    <div class="col-6">
-                        <h:outputLabel class="form-label" value="Vehiculo"/>
-                        <h:selectOneMenu class="col-12 form-select" value="#{service.idCar}">
-                            <f:selectItem itemLabel="Seleccione..."/>
-                            <f:selectItems value="#{carController.getCars(true)}" var="data" itemValue="#{data.id}" itemLabel="#{data.placa}"/>
-                        </h:selectOneMenu>
-                    </div>
-
-                    <div class="col-12 mt-2">
-                        <h:outputLabel class="form-label" value="Descripción"/>
-                        <h:inputTextarea class="form-control" value="#{service.descpt}"/>
-                    </div>
-
-                    <div class="col-11 mt-2">
-                        <h:outputLabel class="form-label" value="Mecanico"/>
-                        <h:selectOneMenu class="col-12 form-select" value="#{mechanicService.idMechanic}">
-                            <f:selectItem itemLabel="Seleccione..."/>
-                            <f:selectItems value="#{mechanicController.getMechanics(true)}" var="data" itemValue="#{data.id}" itemLabel="#{data.documentNumber} - #{data.fullName}"/>
-                        </h:selectOneMenu>
-                    </div>
-
-                    <div class="col-1 mt-4 text-end">
-                        <h:commandLink class="btn btn-dark mt-3" action="#{siteNav.post(site)}">
-                            <i class="fa-solid fa-plus"></i>
-                        </h:commandLink>
-                    </div>
-
-                    <h:dataTable class="table table-bordered mt-4 animate__animated animate__fadeIn" value="#{billMSController.mechanics}" var="data"
-                                 rendered="#{billMSController.mechanics.size()>0}">
-
-                        <h:column>
-                            <f:facet name="header">#</f:facet>
-                            <h:outputLabel class="fw-bold" value="#{data.index}"/>
-                        </h:column>
-
-                        <h:column>
-                            <f:facet name="header">Mecanico</f:facet>
-                            <h:outputLabel value="#{data.fullName}"/>
-                        </h:column>
-
-                        <h:column class="text-center">
-                            <f:facet name="header">Opciones</f:facet>
-
-                            <h:commandLink class="btn btn-primary me-2" action="#{billMSNav.delete(data)}">
-                                <i class="fa-solid fa-unlock"></i>
-                            </h:commandLink>
-                        </h:column>
-
-                    </h:dataTable>
-                </div>
-
-                <div class="col-12 mt-5 text-end">
-                    <h:commandLink class="btn btn-dark" action="#{clientNav.post(client)}">
-                        <i class="fa-solid fa-arrow-right"></i>
-                    </h:commandLink>
-                </div>
-            </h:form>
-
-        </div>
+        
+        <ui:insert name="bill-body"/>
     </ui:define>
 </ui:composition>
