--- a/app/src/main/webapp/pages/bill/bill-index.xhtml
+++ b/app/src/main/webapp/pages/bill/bill-index.xhtml
@@ -16,7 +16,7 @@
 
         <h:form>
             <div class="col-12 text-end">
-                <h:commandLink class="btn btn-dark my-2" action="#{billNav.create}">
+                <h:commandLink class="btn btn-dark my-2" action="#{billNav.createService}">
                     <i class="fa-solid fa-plus"></i>
                 </h:commandLink>
             </div>
