--- a/app/src/main/webapp/pages/car/car-index.xhtml
+++ b/app/src/main/webapp/pages/car/car-index.xhtml
@@ -37,7 +37,8 @@
                                  value="#{carM.placa}"
                                  maxlength="8"
                                  required="true" 
-                                 requiredMessage="Placa es obligatoria">
+                                 requiredMessage="Placa es obligatoria"
+                                 style="text-transform: uppercase">
 
                         <f:validateLength minimum="4" maximum="8"/>
                     </h:inputText>
